# aegis-log

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/basic_logging/: CMakeLists.txt  main.cpp
examples/conditional_logging/: CMakeLists.txt  main.cpp
examples/custom_log_threads/: CMakeLists.txt  main.cpp
examples/multi_logger/: CMakeLists.txt  main.cpp
examples/multi_thread_logging/: CMakeLists.txt  main.cpp
include/aegis-log/: log_entry.h  log_stream.h  log_thread.h  logger.h
include/aegis-log/detail/: config.h
include/aegis-log/formatter/: default_formatter.h
include/aegis-log/helper/: singleton.h
include/aegis-log/sinks/: file_sink.h
include/aegix-log/: log.h
include/aegix-log/formatter/: formatter.h
include/aegix-log/sinks/: console_sink.h  log_sink.h
